--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </main>
   
   <footer>
-    Genshin Impact - Chamada de Guias
+    <span>Genshin Impact - Chamada de Guias</span>
   </footer>
     
     <script type="module" src="./js/script.js"></script>
